--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-build-backend = "cmeel.build"
+build-backend = "cmeel"
 requires = ["cmeel-hwloc", "cmeel-metis", "cmeel-openblas", "cmeel[build]"]
 
 [project]
