--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ repository = "https://github.com/cmake-wheel/cmeel-spral.git"
 
 [tool.cmeel]
 build-number = 1
-py3-none = true
+has-sitelib = false
 run-tests = false
 
 [tool.tomlsort]
