ignore musl for now
  [ 75%] Performing build step for 'spral'
  src/ssids/contrib_free.f90:11:6:

     11 |   use spral_ssids_contrib, only : contrib_type
        |      1
  Fatal Error: Cannot open module file 'spral_ssids_contrib.mod' for reading at (1): No such file or directory

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,11 +14,11 @@ jobs:
     runs-on: "ubuntu-latest"
     strategy:
       matrix:
-        image: ["manylinux_2_28", "musllinux_1_1"]
+        image: ["manylinux_2_28"]  #, "musllinux_1_1"]
         arch: ["x86_64", "aarch64"]
-        exclude:
-          - image: "musllinux_1_1"
-            arch: "aarch64"
+        #exclude:
+          #- image: "musllinux_1_1"
+            #arch: "aarch64"
     steps:
       - uses: actions/checkout@v3
         with:
