add build dependency on autoconf
fix on macos x86_64:

  [ 62%] Performing configure step for 'spral'
  autoreconf: export WARNINGS=
  autoreconf: Entering directory '.'
  autoreconf: configure.ac: not using Gettext
  autoreconf: running: aclocal --force -I m4
  Can't exec "aclocal": No such file or directory at /usr/local/Cellar/autoconf/2.71/share/autoconf/Autom4te/FileUtils.pm line 274.
  autoreconf: error: aclocal failed with exit status: 2
  make[2]: *** [spral-prefix/src/spral-stamp/spral-configure] Error 2
  make[1]: *** [CMakeFiles/spral.dir/all] Error 2
  make: *** [all] Error 2

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
 build-backend = "cmeel"
-requires = ["cmeel-hwloc", "cmeel-metis", "cmeel-openblas", "cmeel[build]"]
+requires = ["cmeel-autoconf", "cmeel-hwloc", "cmeel-metis", "cmeel-openblas", "cmeel[build]"]
 
 [project]
 description = "cmeel distribution for SPRAL"
